--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc"
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart":"npm run build",
+    "start":"nodemon .",
+    "watch":"tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +17,8 @@
   "devDependencies": {
     "tslint": "^6.1.3",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.7"
   }
 }
