--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,26 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "prestart":"npm run build",
-    "start":"nodemon .",
-    "watch":"tsc -w"
+    "prestart": "npm run build",
+    "start": "nodemon .",
+    "watch": "tsc -w",
+    "dev": "npx concurrently --kill-others \"npm run watch\" \"npm start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "tslint": "^6.1.3",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "nodemon": "^3.1.7"
+    "@types/socket.io": "^3.0.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "http": "^0.0.1-security",
+    "nodemon": "^3.1.7",
+    "socket.io": "^4.8.0"
   }
 }
